--- a/html/dino-brain/public/css/style.css
+++ b/html/dino-brain/public/css/style.css
@@ -2,6 +2,12 @@ body{
 	background-color: black;
 }
 
+.admin{
+	display:none;
+}
+
+
+
 .bigBtn{
 	font-family: arial;
 	font-size: 18px;
@@ -33,7 +39,7 @@ body{
 }
 
 .divider{
-	height: 60px;
+	height: 40px;
 }
 .menuLabel{
 	font-family: arial;
@@ -46,9 +52,40 @@ body{
 .menuTitle{
 	font-family: arial;
 	color:white;
-	font-size: 20px;
-	margin-bottom: 20px;
+	font-size: 18px;
+	margin-bottom: 10px;
 
+}
+#dutyCycle{
+	margin-bottom: 	10px;
+}
+#dutyCycleProgressBar{
+	background-color:green;
+	width:0%;
+	height:2px;
+}
+#motorCoolDown{
+	margin-bottom: 	10px;
+	width:300px;
+	font-family: 	arial;
+	font-size:20px;
+	color:red;
+	text-align: 	center;
+}
+#motorCoolDownProgressBar{
+	background-color:red;
+	width:50%;
+	height:30px;
+	margin-top: 20px;
+}
+#pinwrapper{
+	display:none;
+	position:fixed;
+	top:100px;
+	background-color:black;
+	height:300px;
+	width:300px;
+	padding:20px;
 }
 
 .fr{
