--- a/html/dino-brain/public/css/style.css
+++ b/html/dino-brain/public/css/style.css
@@ -11,7 +11,7 @@ body{
 .bigBtn{
 	font-family: arial;
 	font-size: 18px;
-	width: 150px;
+	width: 148px;
 	height: 40px;
 	margin-bottom:10px;
 	background-color:black;
@@ -53,7 +53,7 @@ body{
 	font-family: arial;
 	color:white;
 	font-size: 18px;
-	margin-bottom: 10px;
+	margin-bottom: 0px;
 
 }
 #dutyCycle{
@@ -78,14 +78,21 @@ body{
 	height:30px;
 	margin-top: 20px;
 }
-#pinwrapper{
+#adminLoginPanel{
 	display:none;
 	position:fixed;
 	top:100px;
 	background-color:black;
-	height:300px;
+	height:200px;
 	width:300px;
 	padding:20px;
+	color:white;
+	font-family: arial;
+	font-size: 20px;
+	border: 2px solid white;
+}
+#pinwrapper{
+
 }
 
 .fr{
